--- a/style.css
+++ b/style.css
@@ -12,3 +12,10 @@
     height:50px;
     flex: 1 1 50px;
 }
+
+.changeColor {
+    width: 50px;
+    height:50px;
+    flex: 1 1 50px;
+    background-color: black;
+}
