--- a/style.css
+++ b/style.css
@@ -29,13 +29,15 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-
-    border: 1px solid red;
 }
 
 .box {
     display: flex;
     flex: 1 1 auto;
+}
 
-    border: 1px solid black;
+.boxColorChange {
+    display: flex;
+    flex: 1 1 auto;
+    background-color: blue;
 }
