--- a/style.css
+++ b/style.css
@@ -5,7 +5,14 @@
 }
 
 html, body {
+    font-size: 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    line-height: 1.3;
     background-color: rgb(196, 170, 170);
+}
+
+h2 {
+    font-size: 15px;
 }
 
 .outterWrapper {
@@ -37,11 +44,11 @@ html, body {
     justify-content: space-between;
     align-items: flex-end;
     width: 100%;
-    border: 1px solid blue;
 }
 
 .userControl>button {
     padding: 10px;
+    margin: 10px;
     border-radius: 7px;
     border: none;
     background-color: black;
@@ -49,7 +56,17 @@ html, body {
 }
 
 .userControl {
-    width: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    width: 70%;
+    padding: 5px;
+    border: 1px solid white;
+}
+
+.controlBox {
+    width: 70%;
+    text-align: center;
+    border: 1px solid white;
 }
 
 .roundButton {
@@ -88,5 +105,5 @@ html, body {
 .boxColorChange {
     display: flex;
     flex: 1 1 auto;
-    background-color: blue;
+    background-color: rgb(58, 58, 58);
 }
