--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ h2 {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    background-color: red;
 }
 
 .userControl>button {
@@ -66,6 +67,7 @@ h2 {
     padding: 5px;
     color: white;
     text-align: center;
+    background-color: red;
 }
 
 .roundButton {
